--- a/main.html
+++ b/main.html
@@ -8,16 +8,15 @@
 
 <body>
 	<!-- the entire body must be written by student -->
-	<h1>Time, Space, and Complexity</h1>
-	<p>Time complexity, in computer science, describes how the runtime of an algorithm scales 
-		as the input size grows, often expressed using Big O 
-		notation. It essentially quantifies the efficiency of an 
-		algorithm by measuring how long it takes to complete as a 
-		function of the input size. It's a key metric for evaluating how efficient an algorithm is.</p>
-	<p> <b>Space complexity</b> is a measure of how much memory an algorithm needs to run, relative to the size of its input. 
-		It's a key metric for evaluating how efficient an algorithm is. 
-	When we say an algorithm is O(n), we're stating that the amount of time (or space) 
-		it takes to complete grows linearly with the size of the input</p>
+	<h1>Understanding Time, Space, and Complexity</h1>
+
+    <p>
+        Time complexity refers to the amount of time an algorithm takes to complete as a function of the size of its input. An efficient algorithm has lower time complexity and performs better even with large inputs.
+    </p>
+
+    <p>
+        <b>Space Complexity</b> measures the total amount of memory space that an algorithm uses during its execution. For example, an algorithm with a space complexity of O(n) uses memory linearly proportional to the size of the input.
+    </p>
 	
     <script type="text/javascript" src="./script.js">
 </script>
